--- a/app/src/main/res/layout/all_musicians_band_layout.xml
+++ b/app/src/main/res/layout/all_musicians_band_layout.xml
@@ -1,43 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="2dp"
-    android:elevation="5dp"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-<LinearLayout
-    android:orientation="horizontal"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="5dp"
-    android:layout_marginStart="15dp">
+    android:background="@color/white"
+    android:elevation="5dp">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/all_musicians_band_image_CIV"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:src="@drawable/profile"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_margin="5dp">
-        <TextView
-            android:id="@+id/all_musicians_band_full_name_TV"
-            android:layout_width="wrap_content"
+        android:layout_margin="5dp"
+        android:layout_marginStart="15dp"
+        android:orientation="horizontal">
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/all_musicians_band_image_CIV"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:src="@drawable/profile" />
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_weight="6"
             android:layout_height="wrap_content"
-            android:textStyle="bold"/>
-        <TextView
-            android:id="@+id/all_musicians_band_status_TV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <TextView
-            android:id="@+id/all_musicians_band_date_TV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_margin="5dp"
+            android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/all_musicians_band_full_name_TV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/all_musicians_band_status_TV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/all_musicians_band_date_TV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight=".5"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/all_musicians_band_send_message_IV"
+                android:layout_width="20dp"
+                android:contentDescription="@string/send_message"
+                android:layout_height="20dp"
+                android:src="@drawable/ic_send" />
+
+            <ImageView
+                android:id="@+id/all_musicians_band_instruments_IV"
+                android:layout_width="20dp"
+                android:layout_marginTop="5dp"
+                android:contentDescription="@string/instruments"
+                android:layout_height="20dp"
+                android:src="@drawable/ic_band" />
+        </LinearLayout>
     </LinearLayout>
-
-</LinearLayout>
 </androidx.cardview.widget.CardView>
