--- a/app/src/main/res/layout/activity_my_songs.xml
+++ b/app/src/main/res/layout/activity_my_songs.xml
@@ -44,8 +44,8 @@
         app:layout_constraintTop_toBottomOf="@+id/my_songs_toolbar">
 
         <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
