--- a/app/src/main/res/layout/all_songs_layout.xml
+++ b/app/src/main/res/layout/all_songs_layout.xml
@@ -9,14 +9,12 @@
     android:layout_margin="2dp"
     android:elevation="5dp">
 
-
 <LinearLayout
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
-    android:layout_marginStart="15dp"
-    android:padding="10dp">
+    android:layout_marginStart="15dp">
 
     <LinearLayout
         android:layout_width="0dp"
